[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/alienBlue_walk1.png" type="Texture" id=1]
[ext_resource path="res://Asset/alienBlue_stand.png" type="Texture" id=2]
[ext_resource path="res://Asset/alienBlue_walk2.png" type="Texture" id=3]
[ext_resource path="res://Asset/alienBlue_jump.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.0
height = 64.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Network_tick_rate" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="."]

[connection signal="timeout" from="Network_tick_rate" to="." method="_on_Network_tick_rate_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
